Thu May  8 06:27:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_key_p): thread local storage stores ID.

Thu May  8 01:10:03 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (tr_trans): should squeeze properly.  [ruby-dev:34587]

	* string.c (tr_trans): had a bug in treating multi-byte character
	  replacement. 

	* string.c (rb_str_delete_bang): need not to do anything for empty
	  strings. 

	* test/ruby/test_m17n_comb.rb (TestM17NComb::test_str_delete): add
	  test for empty receiver.

Wed May  7 20:19:18 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options, ruby_set_argv): set encoding of rb_argv
	  after Init_prelude() because cannot load encoding extensions before
	  it.

Wed May  7 20:00:21 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (bit_coerce): float should not be a valid operand of
	  bitwise operations.  [ruby-dev:34583]

Wed May  7 19:35:29 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* thread.c (rb_thread_key_p): should always convert symbol to ID.
	  [ruby-dev:34588]

Wed May  7 19:30:34 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (fix_divide): float division should floor() before
	  rounding into integer.  [ruby-dev:34584]

Wed May  7 18:02:01 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (sym_to_i): remove obsolete method.  preparation for
	  symbol GC.

	* numeric.c (fix_to_sym): ditto.

	* numeric.c (fix_id2name): ditto.

Wed May  7 17:43:22 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_puts_ary): check recursion first.  [ruby-dev:34580]

Wed May  7 17:41:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_eval_body): initialize retval.  [ruby-dev:34576]

Wed May  7 13:02:56 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_fdiv): flo.fdiv(NaN) should result NaN.

	* numeric.c (num_quo): renamed and moved from bignum.c.
	  [ruby-dev:34582]

	* bignum.c (rb_big_fdiv): update RDoc description
